opam-version: "2.0"
name: "bls12-381-stubs-js"
version: "0.3.13"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "OCaml binding for bls12-381 from librustzcash"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {>= "1.7"}
  "dune-configurator" {build}
  "bls12-381"
  "zarith_stubs_js"
  "integers_stubs_js"
  # "zarith" {>= "1.10" & < "2.0"}
  # "ctypes" {= "0.17.1"}
  # "ctypes-foreign" {= "0.4.0"}
  "alcotest" {with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
