(copy_files ../../common/{fft.ml,fft.mli})

(copy_files
  primitives/poseidon128/{ark_128.h,caml_poseidon128_stubs.c,mds_128.h,poseidon128.h,poseidon128.c})

(copy_files primitives/fft/{fft.c,fft.h,caml_fft_stubs.c})

(copy_files bindings/blst_bindings_stubs.c)

(copy_files bindings/blst_fr_misc.h)

(copy_files libblst/bindings/blst.h)

(copy_files libblst/bindings/blst_aux.h)

(data_only_dirs libblst)

(rule
 (enabled_if
  (= %{ocaml-config:system} linux))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.so)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(rule
 (enabled_if
  (= %{ocaml-config:system} macosx))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.so)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(rule
 (enabled_if
  (= %{ocaml-config:system} mingw64))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.dll)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(library
 (public_name bls12-381-unix)
 (name bls12_381_unix)
 (modules
  bls12_381
  fr
  fq12
  g1
  g2
  pairing
  signature
  ;; private
  fq
  fq2
  fft
  poseidon128)
 (implements bls12-381)
 (instrumentation
  (backend bisect_ppx))
 (private_modules fq fq2 fft)
 (libraries hex integers zarith)
 (library_flags :standard -linkall -ccopt -lpthread)
 (foreign_archives blst)
 (foreign_stubs
  (language c)
  ;; For pippenger binding, avoid warnings related to const usage
  (flags -Wno-incompatible-pointer-types)
  (names blst_bindings_stubs caml_poseidon128_stubs poseidon128 fft
    caml_fft_stubs)))

(install
 (files libblst/bindings/blst.h libblst/bindings/blst_aux.h blst_fr_misc.h)
 (section lib)
 (package bls12-381-unix))
