(copy_files ../../common/{fft.ml,fft.mli})

(copy_files
  primitives/poseidon128/{ark_128.h,caml_poseidon128_stubs.c,mds_128.h,poseidon128.h,poseidon128.c})

(copy_files primitives/fft/{fft.c,fft.h,caml_fft_stubs.c})

(copy_files bindings/{blst_bindings_stubs.c,blst_bindings_stubs.js,bls-runtime-helpers.js})

(copy_files bindings/blst_fr_misc.h)

(copy_files libblst/bindings/blst.h)

(copy_files libblst/bindings/blst_aux.h)

(data_only_dirs libblst)

(rule
 (enabled_if
  (= %{ocaml-config:system} linux))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.so)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(rule
 (enabled_if
  (= %{ocaml-config:system} macosx))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.so)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(rule
 (enabled_if
  (= %{ocaml-config:system} mingw64))
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.dll)
 (action
  (no-infer
   (progn
    (run sh ./build_blst.sh)
     (run sh ./build_blst.sh install)))))

(rule
 (deps
  (source_tree libblst)
  needed-wasm-names
  (glob_files *.h))
 (targets blst.wasm blst.js)
 (action
  (run emcc -Os -o blst.js -I libblst/src/ libblst/src/server.c
       %{dep:bindings/blst_wrapper.c} -DENABLE_EMSCRIPTEN_STUBS -DENABLE_MODULE_RECOVERY -s
    ALLOW_MEMORY_GROWTH=1 -s WASM=1 -s MALLOC=emmalloc -s EXPORT_ES6=0 -s
    FILESYSTEM=0 -s MODULARIZE=1 -s EXPORT_NAME='_BLS12381' -s
    EXPORTED_FUNCTIONS=@needed-wasm-names --no-entry)))

(library
 (public_name bls12-381-unix)
 (name bls12_381_unix)
 (modules
  bls12_381
  fr
  fq12
  g1
  g2
  pairing
  signature
  ;; private
  fq
  fq2
  fft
  poseidon128)
 (implements bls12-381)
 (instrumentation
  (backend bisect_ppx))
 (private_modules fq fq2 fft)
 (libraries hex integers zarith)
 (library_flags :standard -linkall -ccopt -lpthread)
 (foreign_archives blst)
 (foreign_stubs
  (language c)
  ;; For pippenger binding, avoid warnings related to const usage
  (flags -Wno-incompatible-pointer-types)
  (names blst_bindings_stubs caml_poseidon128_stubs poseidon128 fft
    caml_fft_stubs)))

(install
 (files blst.wasm blst_bindings_stubs.js bls-runtime-helpers.js libblst/bindings/blst.h libblst/bindings/blst_aux.h blst_fr_misc.h)
 (section lib)
 (package bls12-381-unix))
