(copy_files ../{test_ec_make.ml,ff_pbt.ml})

(copy_files ../../common/{jsoo_lib.ml,jsoo_lib.mli})

(executables
 (names test_fr test_g1 test_g2 test_pairing)
 (modules test_fr test_g1 test_g2 test_pairing test_ec_make alcotest stubs_node jsoo_lib ff_pbt)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            zarith
            zarith_stubs_js
            bls12-381-js-gen
            bls12-381-gen
            ; ff-pbt # Commenting for the moment because ff-pbt does require
            ; Alcotest, and Alcotest is not JavaScript compatible yet
 )
 (public_names test_fr test_g1 test_g2 test_pairing)
 (modes byte)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard ))
 (package bls12-381-js-gen)
)

(rule
 (targets test_fr.js)
 (action
    ( run %{bin:js_of_ocaml}
       %{lib:zarith_stubs_js:biginteger.js}
       %{lib:zarith_stubs_js:runtime.js}
       %{dep:test_fr.bc} -o test_fr.js)
 )
 (package bls12-381-js-gen)
)

(rule
 (targets test_g1.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{dep:test_g1.bc} -o test_g1.js)
 )
 (package bls12-381-js-gen)
)

(rule
 (targets test_g2.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{dep:test_g2.bc} -o test_g2.js)
 )
 (package bls12-381-js-gen)
)

(rule
 (targets test_pairing.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{dep:test_pairing.bc} -o test_pairing.js)
 )
 (package bls12-381-js-gen)
)

(rule
 (alias runtest)
 (deps package.json .npmrc test_fr.js test_g1.js test_g2.js test_pairing.js)
 (action (bash "npm run test"))
 (package bls12-381-js-gen)
)
